// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TodoList Default 1`] = `
<input
  autoFocus={true}
  onChange={[Function]}
  placeholder="Country I want to visit"
  type="search"
  value=""
/>
`;

exports[`Storyshots TodoList Loading 1`] = `
<input
  autoFocus={true}
  onChange={[Function]}
  placeholder="Country I want to visit"
  type="search"
  value=""
/>
`;

exports[`Storyshots TodoList Loading While Typing 1`] = `
Array [
  <input
    autoFocus={true}
    onChange={[Function]}
    placeholder="Country I want to visit"
    type="search"
    value="Loading"
  />,
  <section>
    <ul>
      <li>
        <div />
        <div>
          <div />
        </div>
      </li>
      <li>
        <div />
        <div>
          <div />
        </div>
      </li>
      <li>
        <div />
        <div>
          <div />
        </div>
      </li>
      <li>
        <div />
        <div>
          <div />
        </div>
      </li>
      <li>
        <div />
        <div>
          <div />
        </div>
      </li>
    </ul>
  </section>,
]
`;

exports[`Storyshots TodoList Loading With Persisted Selected 1`] = `
Array [
  <input
    autoFocus={true}
    onChange={[Function]}
    placeholder="Country I want to visit"
    type="search"
    value=""
  />,
  <section>
    <ul>
      <li>
        <div />
        <div>
          <div />
        </div>
      </li>
      <li>
        <div />
        <div>
          <div />
        </div>
      </li>
      <li>
        <div />
        <div>
          <div />
        </div>
      </li>
    </ul>
  </section>,
]
`;

exports[`Storyshots TodoList With Persisted Selected 1`] = `
<input
  autoFocus={true}
  onChange={[Function]}
  placeholder="Country I want to visit"
  type="search"
  value=""
/>
`;
